Version 2.02.174 - 
=================================
  Always clear cached bootloaderarea when wiping label e.g. in pvcreate.
  Disallow --bootloaderareasize with pvcreate --restorefile.
  Fix lvmlockd check for running lock managers during lock adoption.
  Add --withgeneralpreamble and --withlocalpreamble to lvmconfig.
  Improve makefiles' linking.
  Fix some paths in generated makefiles to respected configured settings.
  Add warning when creating thin-pool with zeroing and chunk size >= 512KiB.
  Introduce exit code 4 EINIT_FAILED to replace -1 when initialisation fails.
  Add synchronization points with udev during reshape of raid LVs.

Version 2.02.173 - 20th July 2017
=================================
  Add synchronization points with udev during conversion of raid LVs.
  Improve --size args validation and report more detailed error message.
  Initialize debugging mutex before any debug message in clvmd.
  Log error instead of warn when noticing connection problem with lvmetad.
  Fix memory leak in lvmetad when working with duplicates.
  Remove restrictions on reshaping open and clustered raid devices.
  Add incompatible data_offset to raid metadata to fix reshape activation.
  Accept 'lvm -h' and 'lvm --help' as well as 'lvm help' for help.
  Suppress error message from accept() on clean lvmetad shutdown.
  Tidy clvmd client list processing and fix segfaults.
  Protect clvmd debug log messages with mutex and add client id.
  Fix shellcheck reported issues for script files.

Version 2.02.172 - 28th June 2017
=================================
  Add missing NULL to argv array when spliting cmdline arguments.
  Add display_percent helper function for printing percent values.
  lvconvert --repair handles failing raid legs (present but marked 'D'ead).
  Do not lvdisplay --maps unset settings of cache pool.
  Fix lvdisplay --maps for cache pool without policy settings.
  Support aborting of flushing cache LV.